--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/tanstack-react-query": "^11.6.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
