--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "mprocs \"cmd /c npm run dev:next\" \"cmd /c npm run dev:inngest\"",
+
+    "dev:next": "next dev --turbopack",
+    "dev:inngest": "inngest dev",
+
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
@@ -27,6 +31,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.44.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.575.0",
     "next": "15.5.4",
@@ -52,6 +57,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "inngest-cli": "^1.12.1",
+    "mprocs": "^0.7.3",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
