--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "mprocs \"cmd /c npm run dev:next\" \"cmd /c npm run dev:inngest\"",
-
     "dev:next": "next dev --turbopack",
     "dev:inngest": "inngest dev",
-
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.23",
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.44",
     "@base-ui/react": "^1.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
@@ -23,6 +24,7 @@
     "@trpc/server": "^11.10.0",
     "@trpc/tanstack-react-query": "^11.6.0",
     "@types/bcrypt": "^6.0.0",
+    "ai": "^5.0.60",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
